--- a/daily/templates/daily/boot-test.html
+++ b/daily/templates/daily/boot-test.html
@@ -2,7 +2,6 @@
 <!DOCTYPE html>
 <!-- saved from url=(0040)http://getbootstrap.com/examples/theme/# -->
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
@@ -10,7 +9,7 @@
     <meta name="author" content="">
     <link rel="icon" href="http://getbootstrap.com/favicon.ico">
 
-    <title>Theme Template for Bootstrap</title>
+    <title>daily schedule</title>
 
     <!-- Bootstrap core CSS -->
     <!--<link href="./boot-test_files/bootstrap.min.css" rel="stylesheet"> -->
@@ -22,16 +21,24 @@
 
     <!-- Custom styles for this template -->
     <link href="{% static 'daily/theme.css' %}" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.js"></script>
 
-    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
-    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
     <script src="{% static 'daily/ie-emulation-modes-warning.js' %}"></script><style type="text/css">
-:root .carbonad,
+  
+  <link rel="stylesheet" type="text/css" href="http://www.jeasyui.com/easyui/themes/default/easyui.css">
+  <link rel="stylesheet" type="text/css" href="http://www.jeasyui.com/easyui/themes/icon.css">
+  <link rel="stylesheet" type="text/css" href="http://www.jeasyui.com/easyui/demo/demo.css">
+  <script type="text/javascript" src="http://code.jquery.com/jquery-1.6.1.min.js"></script>
+  <script type="text/javascript" src="http://www.jeasyui.com/easyui/jquery.easyui.min.js"></script>
+ 
+      
+      
+      :root .carbonad,
 :root #carbonads-container,
 :root #content > #center > .dose > .dosesingle,
 :root #content > #right > .dose > .dosesingle
 { display: none !important; }</style>
-
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
@@ -40,7 +47,6 @@
   </head>
 
   <body>
-
     <!-- Fixed navbar -->
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
@@ -51,7 +57,8 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="http://getbootstrap.com/examples/theme/#">Bootstrap theme</a>
+          <a class="navbar-brand"
+            href="http://getbootstrap.com/examples/theme/#">Alabama Industries</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
@@ -76,20 +83,37 @@
     </nav>
 
     <div class="container theme-showcase" role="main">
-
       <div class="page-header">
         <h1>{{ date }}</h1>
       </div>
+      
+    <div style="width:700px">
+      <div class="employees">
+        <table>
+          <tr>
+            {% for project in schedule.all %}
+              {% for emp in project.employee.all %}
+                <td>
+                  <div class="emp-name">{{ emp.name }}</div>
+                </td>
+              {% endfor %}
+            {% endfor %}
+          </tr>
+       </table>
+     </div>
+    </div>
+
       <div class="row">
         <div class="col-md-6">
           <table class="table">
             <thead>
               <tr>
-                <th>#</th>
+                <th></th>
                 <th>Project</th>
                 <th>Time</th>
                 <th>Employee(s)</th>
                 <th>Phone(s)</th>
+                <th></th>
               </tr>
             </thead>
             <tbody>
@@ -98,11 +122,13 @@
                 <td> {{project.id}} </td>
                 <td>{{ project.name }}</td>
                 <td>{{ project.time }}</td>
-                  <td><canvas id="chartId" width="200" height="50"
-                    style="margin: 5px;"> {{ project.employee }}</canvas></td>
-                  <td><canvas id="chartId" width="200" height="50"
+                <td class="drop"></td>
+                <td class="drop"</td>
+                    <!--<canvas id="chartId" width="200" height="50"
                     style="margin: 5px;">{{project.phone}}</canvas></td>
-              </tr>
+                  --!>
+                <td><button type="button" id="edit">Edit</button></td>
+                </tr>
                 {% endfor %}
             </tbody>
           </table>
@@ -111,18 +137,111 @@
 
 
     </div> <!-- /container -->
- 
-
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="./boot-test_files/jquery.min.js"></script>
+    <script src="{% static 'daily/jquery.min.js' %}"></script>
     <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
-    <script src="./boot-test_files/bootstrap.min.js"></script>
-    <script src="./boot-test_files/docs.min.js"></script>
+      <script src="{% static 'daily/bootstrap.min.js' %}"></script>
+      <script src="{% static 'daily/docs.min.js' %}"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="./boot-test_files/ie10-viewport-bug-workaround.js"></script>
-  
+    <script src="{% static 'daily/ie10-viewport-bug-workaround.js' %}"></script>
 
-<div id="global-zeroclipboard-html-bridge" class="global-zeroclipboard-container" title="" style="position: absolute; left: 0px; top: -9999px; width: 15px; height: 15px; z-index: 999999999;" data-original-title="Copy to clipboard">      <object classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" id="global-zeroclipboard-flash-bridge" width="100%" height="100%">         <param name="movie" value="/assets/flash/ZeroClipboard.swf?noCache=1472996514672">         <param name="allowScriptAccess" value="sameDomain">         <param name="scale" value="exactfit">         <param name="loop" value="false">         <param name="menu" value="false">         <param name="quality" value="best">         <param name="bgcolor" value="#ffffff">         <param name="wmode" value="transparent">         <param name="flashvars" value="trustedOrigins=getbootstrap.com%2C%2F%2Fgetbootstrap.com%2Chttp%3A%2F%2Fgetbootstrap.com">         <embed src="/assets/flash/ZeroClipboard.swf?noCache=1472996514672" loop="false" menu="false" quality="best" bgcolor="#ffffff" width="100%" height="100%" name="global-zeroclipboard-flash-bridge" allowscriptaccess="sameDomain" allowfullscreen="false" type="application/x-shockwave-flash" wmode="transparent" pluginspage="http://www.macromedia.com/go/getflashplayer" flashvars="trustedOrigins=getbootstrap.com%2C%2F%2Fgetbootstrap.com%2Chttp%3A%2F%2Fgetbootstrap.com" scale="exactfit">                </object></div><svg xmlns="http://www.w3.org/2000/svg" width="1140" height="500" viewBox="0 0 1140 500" preserveAspectRatio="none" style="display: none; visibility: hidden; position: absolute; top: -100%; left: -100%;"><defs><style type="text/css"></style></defs><text x="0" y="57" style="font-weight:bold;font-size:57pt;font-family:Arial, Helvetica, Open Sans, sans-serif">Thirdslide</text></svg></body></html>
+<style type="text/css">
+.employees{
+      width:120px;
+      float:left;
+    }
+    .employees table{
+      background:#E0ECFF;
+    }
+    .employees td{
+      background:#eee;
+    }
+    .right{
+      float:right;
+      width:570px;
+    }
+    .right table{
+      background:#E0ECFF;
+      width:100%;
+    }
+    .right td{
+      background:#fafafa;
+      color:#444;
+      text-align:center;
+      padding:2px;
+    }
+    .right td{
+      background:#E0ECFF;
+    }
+    .right td.drop{
+      background:#fafafa;
+      width:100px;
+    }
+    .right td.over{
+      background:#FBEC88;
+    }
+    .emp-name{
+      text-align:center;
+      border:1px solid #499B33;
+      background:#fafafa;
+      color:#444;
+      width:100px;
+    }
+    .assigned{
+      border:1px solid #BC2A4D;
+    }
+    .trash{
+      background-color:red;
+    }
+    
+  </style>
+
+
+<script>
+    $(function(){
+      $('.employees .emp-name').draggable({
+        revert:true,
+        proxy:'clone'
+      });
+      $('.right td.drop').droppable({
+        accept: '.item',
+        onDragEnter:function(){
+          $(this).addClass('over');
+        },
+        onDragLeave:function(){
+          $(this).removeClass('over');
+        },
+        onDrop:function(e,source){
+          $(this).removeClass('over');
+          if ($(source).hasClass('assigned')){
+            $(this).append(source);
+          } else {
+            var c = $(source).clone().addClass('assigned');
+            $(this).empty().append(c);
+            c.draggable({
+              revert:true
+            });
+          }
+        }
+      });
+      $('.left').droppable({
+        accept:'.assigned',
+        onDragEnter:function(e,source){
+          $(source).addClass('trash');
+        },
+        onDragLeave:function(e,source){
+          $(source).removeClass('trash');
+        },
+        onDrop:function(e,source){
+          $(source).remove();
+        }
+      });
+    });
+  </script>
+
+
+
+
