consistentize flex boxes and borders + clone

--- a/daily/templates/daily/div-test.html
+++ b/daily/templates/daily/div-test.html
@@ -86,18 +86,18 @@
               <td>{{ project.time }}</td>
               <td>
                 <div class="container-fluid">
-                  <ol class='nested_with_switch' id="emps">
+                  <ol class='simple_with_drop' id="emps">
                     {% for emp in project.employee.all %}
-                    <li>{{ emp.name }}</li>
+                    <li class="flex-li">{{ emp.name }}</li>
                     {% endfor %}
                   </ol>
                 </div>
               </td>
               <td>
                 <div class="container-fluid">
-                  <ol class='nested_with_switch' id="tels">
+                  <ol class='simple_with_drop' id="tels">
                     {% for tel in project.phone.all %}
-                    <li>{{ tel.number }}</li>
+                    <li class="flex-li">{{ tel.number }}</li>
                     {% endfor %}
                   </ol>
                 </div>
@@ -108,9 +108,9 @@
           <div class="v-box">
             <h3>employees</h3>
             <div class="container-fluid">
-                  <ol class='nested_with_switch' id="emps-flex-list">
+                  <ol class='simple_with_no_drop' id="emps-flex-list">
                     {% for emp in emp_names.all %}
-                    <li id="flex-li">{{ emp.name }}</li>
+                    <li class="flex-li">{{ emp.name }}</li>
                     {% endfor %}
                   </ol>
                 </div>
@@ -118,7 +118,7 @@
              <div class="container-fluid">
                   <ol class='simple_with_no_drop' id="phones-flex-list">
                     {% for phone in phones.all %}
-                    <li id="flex-li">{{ phone.number }}</li>
+                    <li class="flex-li">{{ phone.number }}</li>
                     {% endfor %}
                   </ol>
                 </div>
@@ -129,10 +129,12 @@
 
 
         <style type="text/css">
-          #flex-li {
+          .flex-li {
             border: 1px solid black;
             margin: 3px;
             padding: 3px;
+            width: 100px;
+            text-align: center;
           }
           
           .h-box {
@@ -223,11 +225,11 @@
             border: 1px solid #eee;
           }
 
-          ol.nested_with_switch li.placeholder {
+          ol.simple_with_drop li.placeholder {
             position: relative;
           }
 
-          ol.nested_with_switch li.placeholder:before {
+          ol.simple_with_drop li.placeholder:before {
             position: absolute;
           }
           
@@ -256,7 +258,7 @@
           }
 
           function addProject() {
-            $('#daily-table > tbody:last-child').append($('<tr>')
+            $('#daily-table > tbody > tr:first-child').after($('<tr>')
                 .append($('<td>'))
                 .append($('<td>')
                   .append($('<input type="text" id="new-name">')))
@@ -264,10 +266,10 @@
                   .append($('<input type="text" id="new-time" class="time ui-timepicker-input">')))
                 .append($('<td>')
                   .append($('<div class="container-fluid">')
-                    .append($("<ol class='nested_with_switch' id='emps_list'>"))))
+                    .append($("<ol class='simple_with_drop' id='emps_list'>"))))
                 .append($('<td>')
                   .append($('<div class="container-fluid">')
-                    .append($("<ol class='nested_with_switch' id='emps_list'>"))))
+                    .append($("<ol class='simple_with_drop' id='emps_list'>"))))
             );
 
             $('#new-proj-button').toggle();
@@ -275,70 +277,49 @@
             $('#new-name').focus();
             $('#new-time').timepicker({
               'step': function(i) {
-                return (i%2) ? 15 : 45;
               }
             });
 
-            var oldContainer;
-            $("ol.nested_with_switch").sortable({
-              group: 'nested',
-              afterMove: function (placeholder, container) {
-                if(oldContainer != container){
-                  if(oldContainer){
-                    oldContainer.el.removeClass("active");
-                  }
-                  container.el.addClass("active");
-                  oldContainer = container;
-                }
-              },
-
-              onDrop: function ($item, container, _super) {
-                container.el.removeClass("active");
-                 _super($item, container);
+            $("ol.simple_with_drop").sortable({
+              group: 'no-drop',
+              handle: 'i.icon-move',
+              onDragStart: function ($item, container, _super) {
+                // Duplicate items of the no drop area
+                if(!container.options.drop)
+                $item.clone().insertAfter($item);
+                _super($item, container);
               }
             });
 
-            $(".switch-container").on("click", ".switch", function  (e) {
-              var method = $(this).hasClass("active") ? "enable" : "disable";
-              $(e.delegateTarget).next().sortable(method);
+            $("ol.simple_with_no_drop").sortable({
+              group: 'no-drop',
+              drop: false
             });
+
         }
 
-              var oldContainer;
-              $("ol.nested_with_switch").sortable({
-                group: 'nested',
-                afterMove: function (placeholder, container) {
-                  if(oldContainer != container){
-                    if(oldContainer){
-                      oldContainer.el.removeClass("active");
-                    }
-                    container.el.addClass("active");
-                    oldContainer = container;
-                  }
-                },
+        $("ol.simple_with_drop").sortable({
+          group: 'no-drop',
+          //handle: 'i.icon-move',
+          onDragStart: function ($item, container, _super) {
+            // Duplicate items of the no drop area
+            if(!container.options.drop)
+            $item.clone().insertAfter($item);
+            _super($item, container);
+          }
+        });
 
-                  onDrop: function ($item, container, _super) {
-                  container.el.removeClass("active");
-                  _super($item, container);
-                }
-              });
+        $("ol.simple_with_no_drop").sortable({
+          group: 'no-drop',
+          drop: false
+        });
 
-
-              $("ol.simple_with_no_drop").sortable({
-                  group: 'no-drop',
-                    drop: false
-                });
-
-              $('.item-list').sortable({
-                group: 'list-group',
-                pullPlaceholder: false,
-              });
+        $('.item-list').sortable({
+          group: 'list-group',
+          pullPlaceholder: false,
+        });
 
 
-              $(".switch-container").on("click", ".switch", function  (e) {
-                var method = $(this).hasClass("active") ? "enable" : "disable";
-                $(e.delegateTarget).next().sortable(method);
-              });
 
-            </script>
-          </body>
+      </script>
+    </body>
